--- a/roles/dns/tasks/main.yml
+++ b/roles/dns/tasks/main.yml
@@ -7,27 +7,31 @@
 
 - name: Config DNS - Centos
   template:
-    src: named.conf.j2
+    src: centos.conf.j2
     dest: /etc/named.conf
+  when: ansible_distribution == "CentOS"
+
+- name: Config DNS - Ubuntu
+  template:
+    src: ubuntu.conf.j2
+    dest: /etc/bind/named.conf.options
+  when: ansible_distribution == "Ubuntu"
 
 - name: Config Forward Zones - CentOS
   template:
     src: forward_zone.j2
-    dest: /var/named/forward.{{ zone['zone_name'] }}
+    dest: "{{ config_path }}/forward.{{ zone['zone_name'] }}"
   loop: "{{ zones }}"
   loop_control:
     loop_var: zone
-  when: ansible_distribution == "CentOS"
   notify: restart dns service
 
 - name: Config Reverse Zone - CentOS
   template:
     src: reverse_zone.j2
-    dest: /var/named/reverse.{{ zone['zone_name'] }}
+    dest: "{{ config_path }}/reverse.{{ zone['reverse_zone'] }}"
   loop: "{{ zones }}"
   loop_control:
     loop_var: zone
-  when: ansible_distribution == "CentOS"
   notify: restart dns service
-
 ...
